@@ -1,3 +1,9 @@
+2011-06-26  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* Opcode/Opcode.h:
+	Apparently, pragma GCC diagnostic push/pop only works on gcc-4.6
+	and later.
+
 2011-06-24  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Opcode/Makefile:
